--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -1,3 +1,3 @@
 @import url('./default.css');
 @import url('./report.css');
-@import url('./view-playground.css');
+@import url('./views-showcase.css');
