--- a/src/pages/views-showcase.css
+++ b/src/pages/views-showcase.css
@@ -1,4 +1,4 @@
-.page-view-playground {
+.page-views-showcase {
     display: flex;
     flex-direction: row;
     border: 1px solid #ddd;
@@ -11,36 +11,36 @@
     background-color: rgba(255, 255, 255, .8);
 }
 
-.page-view-playground > .sidebar {
+.page-views-showcase > .sidebar {
     width: 220px;
     border-right: 1px solid #f0f0f0;
 }
-.page-view-playground > .sidebar .view-content-filter {
+.page-views-showcase > .sidebar .view-content-filter {
     height: 100%;
     display: flex;
     flex-direction: column;
 }
-.page-view-playground > .sidebar .view-content-filter > .view-input {
+.page-views-showcase > .sidebar .view-content-filter > .view-input {
     margin: 0;
 }
-.page-view-playground > .sidebar .view-content-filter > .view-input input {
+.page-views-showcase > .sidebar .view-content-filter > .view-input input {
     border: none;
     border-bottom: 1px solid #eee;
     border-radius: 0;
 }
-.page-view-playground > .sidebar .view-content-filter .view-block {
+.page-views-showcase > .sidebar .view-content-filter .view-block {
     flex: 1;
     overflow: hidden;
     overflow-y: scroll;
 }
-.page-view-playground > .sidebar .view-menu-item:not(.disabled) {
+.page-views-showcase > .sidebar .view-menu-item:not(.disabled) {
     color: #0099DD;
 }
-.page-view-playground > .sidebar .view-menu-item:hover {
+.page-views-showcase > .sidebar .view-menu-item:hover {
     color: #0077BB;
 }
 
-.page-view-playground > .content {
+.page-views-showcase > .content {
     flex: 1;
     padding: 20px;
     overflow: hidden;
