--- a/src/pages/report/editor-view.css
+++ b/src/pages/report/editor-view.css
@@ -43,33 +43,35 @@
 .page-report > .report-editor .view-editor-form-content .view-expand .header {
     background: none;
 }
-
 .page-report > .report-editor .view-editor-form-content .view-expand .header:hover {
-    background: #e4e4e4;
+    background: rgba(0, 0, 0, .05);
 }
 
 .page-report > .report-editor .view-editor-form-content .view-editor-view-list {
     display: none;
+    padding-top: 15px;
     padding-left: 26px;
     padding-right: 26px;
     font-size: 12px;
     color: #aaa;
+    column-count: 8;
+    column-width: 120px;
+    column-gap: 20px;
+    margin-right: -190px;
 }
 .page-report > .report-editor .view-editor-form-content .view-editor-view-list.visible {
     display: block;
 }
-.page-report > .report-editor .view-editor-form-content .view-editor-view-list .item {
+.page-report > .report-editor .view-editor-form-content .view-editor-view-list .item:not(:hover) {
     color: #75a3bf;
     white-space: nowrap;
 }
-
-.page-report > .report-editor .view-editor-form-content .view-editor-view-list .item.with-usage {
-    border-bottom: 1px dashed #75a3bf;
-    cursor: help;
+.page-report > .report-editor .view-editor-form-content .view-editor-view-list .item:not([href]) {
+    color: #888;
 }
 
 .discovery-view-popup.view-editor-view-list-hint {
-    padding: 10px;
+    padding: 20px;
     min-width: 640px;
     min-height: 100px;
 }
