--- a/src/views/headers.css
+++ b/src/views/headers.css
@@ -1,10 +1,15 @@
+.view-header {  /* the same as h4 */
+    font-size: 120%;
+    font-weight: normal;
+}
+.view-header:first-child {
+    margin-top: 0;
+}
+
 .view-h1 {
     font-size: 220%;
     font-weight: normal;
     margin: .812em 0 .65em;
-}
-.view-h1:first-child {
-    margin-top: 0;
 }
 
 .view-h2 {
@@ -19,17 +24,16 @@
     margin: .73em 0;
 }
 
-.view-h4,
-.view-header {
+.view-h4 {
     font-size: 120%;
     font-weight: normal;
-    color: #222;
+    color: rbga(0, 0, 0, .085);
     margin: .73em 0;
 }
 
 .view-h5 {
     font-size: 110%;
     font-weight: normal;
-    color: #777;
+    color: rbga(0, 0, 0, .3);
     margin: .68em 0;
 }
