--- a/src/views/headers.css
+++ b/src/views/headers.css
@@ -27,13 +27,13 @@
 .view-h4 {
     font-size: 120%;
     font-weight: normal;
-    color: rbga(0, 0, 0, .085);
+    color: rgba(0, 0, 0, .085);
     margin: .73em 0;
 }
 
 .view-h5 {
     font-size: 110%;
     font-weight: normal;
-    color: rbga(0, 0, 0, .3);
+    color: rgba(0, 0, 0, .3);
     margin: .68em 0;
 }
