Don't apply min-height for report content in dzen mode

--- a/src/pages/report.css
+++ b/src/pages/report.css
@@ -6,7 +6,7 @@
 .page-report {
     padding-top: 0;
 }
-.page-report > .report-content {
+.discovery:not([data-dzen]) .page-report > .report-content {
     min-height: calc(100vh - 121px);
 }
 
