Chart view based on Billboard.js

--- a/src/views/index.css
+++ b/src/views/index.css
@@ -2,6 +2,7 @@
 @import url('./alerts.css');
 @import url('./badges.css');
 @import url('./button.css');
+@import url('./chart.css');
 @import url('./checkbox-list.css');
 @import url('./checkbox.css');
 @import url('./column.css');
