--- a/src/pages/report/editor-common.css
+++ b/src/pages/report/editor-common.css
@@ -20,14 +20,14 @@
     display: inline-block;
     margin: 0 1px 1px 0;
     padding: 2px 12px;
-    background: #f4f4f4;
+    background: rgba(200, 200, 200, 0.2);
     font-size: 12px;
     cursor: pointer;
 }
 .page-report > .report-editor .report-editor-tab.active {
     padding-bottom: 3px;
     margin-bottom: 0;
-    background: #e8f5fd;
+    background: rgba(140, 205, 245, 0.2);
     cursor: default;
 }
 .page-report > .report-editor .report-editor-tab:not(.active):hover {
