--- a/src/views/editors.css
+++ b/src/views/editors.css
@@ -9,6 +9,8 @@
     margin-bottom: 5px;
     font-family: Consolas, Monaco, monospace;
     font-size: 12px;
+    background-color: var(--discovery-input-bg-color);
+    transition: background-color .25s ease-in;
     border: 1px solid #aaa;
     border-radius: 3px;
     box-shadow: inset 0 1px 1px rgba(142, 142, 142, .2);
