--- a/src/views/menu-item.css
+++ b/src/views/menu-item.css
@@ -11,10 +11,10 @@
 }
 .view-menu-item:hover,
 .view-menu-item.discovery-view-popup-active {
-    background: #e0e0e0;
+    background: rgba(131, 131, 131, 0.25);
 }
 .view-menu-item.selected {
-    background: #c6dee7;
+    background: rgba(178, 221, 248, 0.3);
     cursor: default;
 }
 .view-menu-item.disabled {
