--- a/src/views/struct/style/annotation.css
+++ b/src/views/struct/style/annotation.css
@@ -45,7 +45,7 @@
     vertical-align: middle;
     padding: 1px 4px 1px;
     text-decoration: none;
-    background: #f0f0f0;
+    background: rgba(155, 155, 155, 0.15);
     color: #999;
     font-size: 10px;
     line-height: 14px;
@@ -53,7 +53,7 @@
     user-select: none;
 }
 .view-struct .value-annotation.style-badge[href] {
-    background: #dfeffb;
+    background: rgba(55, 155, 230, 0.16);
 }
 .view-struct .value-annotation.style-badge[href]:hover {
     text-decoration: underline;
