--- a/src/views/struct/style/structure.css
+++ b/src/views/struct/style/structure.css
@@ -7,33 +7,35 @@
     margin-left: -4ch;
 }
 .view-struct .property {
-    color: #bd6476;
+    color: var(--discovery-view-struct-property-color, #bd6476);
 }
 .view-struct .value {
     white-space: normal;
     vertical-align: top;
 }
-.view-struct .keyword,
+.view-struct .keyword {
+    color: var(--discovery-view-struct-keyword-color, #07a);
+}
 .view-struct .number {
-    color: #07a;
+    color: var(--discovery-view-struct-number-color, #07a);
 }
 .view-struct .num-delim {
     padding-left: 3px;
 }
 .view-struct .string,
 .view-struct .string a {
-    color: #690;
-    text-decoration-color: #bfd3a3;
+    color: var(--discovery-view-struct-string-color, #690);
+    text-decoration-color: var(--discovery-view-struct-string-underline-color, #bfd3a3);
     white-space: pre;
 }
 .view-struct .string a:hover {
-    color: #527a00;
+    color: var(--discovery-view-struct-string-hover-color, #527a00);
     text-decoration-color: currentColor;
 }
 .view-struct .value-size,
 .view-struct .string-length {
     padding-left: 6px;
-    color: #ccc;
+    color: rgba(153, 153, 153, 0.5);
     font-size: 9px;
     line-height: 11px;
     vertical-align: text-bottom;
@@ -45,19 +47,19 @@
 .view-struct .string-text {
     display: inline;
     white-space: pre-wrap;
-    box-shadow: 0 0 0 3px #e9f6e8;
-    background: #e9f6e8;
-    color: #690;
+    box-shadow: 0 0 0 2px rgba(35, 165, 25, 0.1);
+    background: rgba(35, 165, 25, 0.1);
+    color: var(--discovery-view-struct-string-color, #690);
 }
 .view-struct .string-value-as-text .string-text {
     display: block;
     white-space: pre-wrap;
-    box-shadow: 0 0 0 3px #f4f4f4;
-    background: #f4f4f4;
-    color: #666;
+    box-shadow: 0 0 0 2px rgba(145, 145, 145, 0.1);
+    background: rgba(145, 145, 145, 0.1);
+    color: var(--discovery-view-struct-color, #666);
 }
 .view-struct .more {
-    color: #999;
+    color: rgba(127, 127, 127, 0.8);
     white-space: nowrap;
 }
 .view-struct .string .more {
