--- a/src/views/editors-hint.css
+++ b/src/views/editors-hint.css
@@ -10,9 +10,10 @@
 
     box-shadow: 2px 3px 5px rgba(0, 0, 0, .2);
     border-radius: 2px;
-    border: 1px solid silver;
+    border: 1px solid rgba(176, 176, 176, 0.65);
 
     background: white;
+    color: black;
     font-size: 90%;
     font-family: monospace;
 
@@ -23,6 +24,10 @@
     font-size: 12px;
     line-height: 18px;
 }
+.discovery-view-editor-hints-popup.darkmode {
+    background: #323232;
+    color: #ccc;
+}
 
 .discovery-view-editor-hint {
     display: flex;
@@ -30,11 +35,10 @@
     margin: 0;
     padding: 2px 6px;
     white-space: pre;
-    color: black;
     cursor: pointer;
 }
 .discovery-view-editor-hint:hover {
-    background-color: #f0f0f0;
+    background-color: rgba(180, 180, 180, 0.2);
 }
 
 .discovery-view-editor-hint .name {
@@ -43,8 +47,11 @@
 .discovery-view-editor-hint .match {
     color: #06C;
 }
+.discovery-view-editor-hints-popup.darkmode .discovery-view-editor-hint .match {
+    color: #4d8bca;
+}
 .discovery-view-editor-hint .type {
-    color: #ccc;
+    color: rgba(153, 153, 153, 0.5);
     font-family: Tahoma;
     font-style: italic;
     font-size: 85%;
