--- a/src/views/nav-button.css
+++ b/src/views/nav-button.css
@@ -2,40 +2,26 @@
     vertical-align: top;
     display: inline-block;
     min-height: 1.6em;
-    font-size: 12px;
-    color: #444;
-    background: rgba(180, 180, 180, 0.2);
     padding: 5px 15px 6px;
+    color: #444;
+    background-color: rgba(155, 155, 155, 0.15);
+    font-size: 12px;
     text-decoration: none;
     cursor: pointer;
-    transition: border-color .25s ease-in;
 }
 .view-nav-button:hover,
 .view-nav-button.discovery-view-popup-active {
     color: black;
-    background-color: #e0e0e0;
+    background-color: rgba(151, 151, 151, 0.3);
 }
 .view-nav-button + .view-nav-button {
-    border-left: 1px solid #d8d8d8;
+    margin-left: 1px
 }
 .view-nav-button.disabled,
 .view-nav-button:not(.onclick):not([href]) {
     pointer-events: none;
 }
 
-.view-nav-button:hover,
-.view-nav-button.discovery-view-popup-active {
-    color: black;
-    background-color: #e0e0e0;
-}
-
 .discovery[data-darkmode] .view-nav-button {
-    color: #cccccc;
-}
-.discovery[data-darkmode] .view-nav-button:hover,
-.discovery[data-darkmode] .view-nav-button.discovery-view-popup-active {
-    background-color: rgba(180, 180, 180, 0.3);
-}
-.discovery[data-darkmode] .view-nav-button + .view-nav-button {
-    border-color: #383838;
+    color: #ccc;
 }
