--- a/src/widget/widget.css
+++ b/src/widget/widget.css
@@ -20,6 +20,14 @@
     --discovery-button-hover-color: black;
     --discovery-button-hover-bg-color: #f5f5f5;
     --discovery-button-hover-border-color: #cccccc;
+
+    --discovery-fmt-variable-color: #047d65;
+    --discovery-fmt-property-color: #bd6476;
+    --discovery-fmt-keyword-color: #07a;
+    --discovery-fmt-number-color: #07a;
+    --discovery-fmt-string-color: #690;
+    --discovery-fmt-string-highlight-color: rgba(35, 165, 25, 0.1);
+    --discovery-fmt-comment-color: #75787b;
 }
 .discovery[data-darkmode] {
     --discovery-background-color: #242424;
@@ -32,6 +40,16 @@
     --discovery-button-hover-color: black;
     --discovery-button-hover-bg-color: #f5f5f5;
     --discovery-button-hover-border-color: #cccccc;
+
+    --discovery-fmt-color: #999;
+    --discovery-fmt-hover-color: #aaa;
+    --discovery-fmt-variable-color: #16a78a;
+    --discovery-fmt-property-color: #d17a8c;
+    --discovery-fmt-keyword-color: #0f8dc2;
+    --discovery-fmt-number-color: #0f8dc2;
+    --discovery-fmt-string-color: #7faf20;
+    --discovery-fmt-string-underline-color: #85ab51;
+    --discovery-fmt-string-hover-color: #97cf26;
 }
 
 .discovery-content {
